# datastructure

./: README.md  adivinhacao.c  adivinhacao.out  especificadorvariavel.c  estruturaderepeticao.c  estruturaderepeticao.out  fila01.c  ponteiro2.c  ponteiro3  ponteiro3.c  ponteiroex.c  prog0106.c  prog0106.out  prog0107.c  prog0211.c  prog0501  prog0501.c  prog0502  prog0502.c  prog0601  prog0602  prog0602.c  prog0605.c  registro  registro.c  registro2  registro2.c  scanf.c  scanf.out  switch.c  switch.out  testechar.c  testechar.out  verifica  verifica.c  while.c  while2.c
Arrays/: array01.c  array01.out  array02.c  jogodavelha.c  jogodavelha.out
Exam-Review/: ex01.c  ex01.out  ex02.c  ex02.out  ex03.c  ex03.out  ex04.c  ex04.out  ex05.c  ex05.out  ex06.c  ex06.out  ex07.c  ex07.out  ex08.c  ex08.out  fred01.c  fred01.out  fred02.c  fred02.out  fred03.c  fred03.out
Exercises/: CMakeLists.txt  README.md  adivinhacao  desafio.c  dowhile.c  ponteiro2.out  ponteiroex  prog0107.out  prog0108.c  prog0108.out  prog0109.c  prog0109.out  prog0201.c  prog0601.c  rev02.c  rev02.out  rev04.c  rev06.c  rev06.out  rev08.c  rev09.c  rev09.out  rev10.c  rev11.c  testevetor.c  testevetor.out  varbool.c  varbool.out  while.out
Functions /: prog0501.c  prog5551.out  prog5552.c  prog5552.out  prog5553.c  prog5553.out
Jogo da adivinhacao/: adivinhacao.c  adivinhacao.out
Listas Dinamicas Enc/: listadinamicaencadeada.c  listadinamicaencadeada.out
Review/: rev01.c  rev01.out  rev03.c  rev03.out  rev04.out  rev05.c  rev05.out  rev07.c  rev07.out  rev08.c  rev08.out  rev10.out  sizeof.c  (+2 more)
(+60 files in other folders)
